[tool.poetry]
name = "ggst-api"
version = "0.0.1"
description = "Guilty Gear Strive API wrapper"
authors = ["UnknownMemory <jeremyschneider21@gmail.com>"]
packages = [
    {include = "GGST"}
]

[tool.poetry.dependencies]
python = "^3.9"
msgpack = "^1.0.3"
requests = "^2.27.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
