[tool.poetry]
name = "ggst-api"
version = "0.0.5"
description = "Guilty Gear Strive API wrapper"
authors = ["UnknownMemory <jeremyschneider21@gmail.com>"]
packages = [
    {include = "GGST"}
]

[tool.poetry.dependencies]
python = "^3.9"
msgpack = "^1.0.4"
requests = "^2.28.1"
python-dotenv = "^0.20.0"
black = "^22.8.0"
pylint = "^2.15.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"
black = "^22.3.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
